added week 4 material - not rendered

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ website:
           - week1.qmd 
           - week2.qmd      
           - week3.qmd 
+          - week4.qmd
       - href: resources.qmd
         text: Resources
       
