--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ website:
           - week2.qmd      
           - week3.qmd 
           - week4.qmd
+          - week5.qmd
       - href: resources.qmd
         text: Resources
       
