added week 6 tab

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ website:
           - week3.qmd 
           - week4.qmd
           - week5.qmd
+          - week6.qmd
       - href: resources.qmd
         text: Resources
       
