--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ website:
           - week4.qmd
           - week5.qmd
           - week6.qmd
+          - week7.qmd
       - href: resources.qmd
         text: Resources
       
