--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,7 @@ website:
           - week5.qmd
           - week6.qmd
           - week7.qmd
+          - week8.qmd
       - href: resources.qmd
         text: Resources
       
