--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,7 @@ website:
           - 411b_spring/411b_overview.qmd   
           - 411b_spring/411b_week1.qmd
           - 411b_spring/411b_week2.qmd   
+          - 411b_spring/411b_week3.qmd   
           - 411b_spring/411b_resources.qmd       
       
 
