--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
           - 411b_spring/411b_week1.qmd
           - 411b_spring/411b_week2.qmd   
           - 411b_spring/411b_week3.qmd   
-         # - 411b_spring/411b_week4.qmd   
+          - 411b_spring/411b_week4.qmd   
           - 411b_spring/411b_resources.qmd       
       
 
