--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,7 @@ website:
           - 411b_spring/411b_week2.qmd   
           - 411b_spring/411b_week3.qmd   
           - 411b_spring/411b_week4.qmd   
+          - 411b_spring/411b_week5.qmd   
           - 411b_spring/411b_resources.qmd       
       
 
