--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ website:
           - 411b_spring/411b_week4.qmd   
           - 411b_spring/411b_week5.qmd   
           - 411b_spring/411b_week6.qmd   
+          - 411b_spring/411b_week7.qmd   
           - 411b_spring/411b_resources.qmd       
       
 
