--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ website:
           - 411b_spring/411b_week5.qmd   
           - 411b_spring/411b_week6.qmd   
           - 411b_spring/411b_week7.qmd   
+          - 411b_spring/411b_week8.qmd   
           - 411b_spring/411b_resources.qmd       
       
 
